[package]
name = "nft-escrow"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.9.4"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]